5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1793_1596.log
== SUBMITION (2019-05-30 18:06:30) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:",dtype = float)))
media = sum(VN)/size(VN)
print(round(media,2))
-- EXECUTION TIME:
0.533372
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 2, in <module>
    VN = array(eval(input("notas:",dtype = float)))
TypeError: input() takes no keyword arguments

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:06:32) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:",dtype = float)))
media = sum(VN)/size(VN)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:36) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:",)))
media = sum(VN)/size(VN)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:08:14) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:",)))
media = sum(VN)/size(VN)
print(round(media,2))
-- EXECUTION TIME:
0.399768
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
notas:1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
notas:2.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
notas:2.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:30) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:",)dtype=float))
media = sum(VN)/size(VN)
print(round(media,2))
-- ERROR:
File "XXXX", line 2
    VN = array(eval(input("notas:",)dtype=float))
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:45) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN)/size(VN) - min(VN)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:47) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN)/size(VN) - min(VN)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:12:48) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN)/size(VN) - min(VN)
print(round(media,2))
-- EXECUTION TIME:
0.500215
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
notas:0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:14:04) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN)/size(VN) 
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:00) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN)/size(VN) 
media = media - min(VN)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:15:00) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN)/size(VN) 
media = media - min(VN)
print(round(media,2))
-- EXECUTION TIME:
0.494239
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
notas:0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:22:51) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN,dtype = float)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:22:53) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN,dtype = float)
print(round(media,2))
-- EXECUTION TIME:
0.35947
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
14.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
4.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:22:53) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN,dtype = float)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:22:55) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN,dtype = float)
print(round(media,2))
-- EXECUTION TIME:
0.513156
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
4.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:22:56) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
media = sum(VN,dtype = float)
print(round(media,2))
-- EXECUTION TIME:
0.938455
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
14.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:33:15) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]>=0):
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.325176
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:33:16) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]>=0):
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:33:18) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]>=0):
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.423085
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:35:33) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.495449
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]==min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:35:35) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:35:39) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.470599
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]==min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:36:43) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.548393
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]==min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:36:47) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.595069
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]==min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:36:47) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.93363
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]==min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:36:47) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
1.27297
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]==min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:02) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:37:04) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]==min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.413925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]==min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:37:59) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:37:59) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min[VN]):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.472826
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1793/1596/main.py", line 7, in <module>
    if(VN[i]== min[VN]):
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:38:53) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
File "XXXX", line 7
    if(VN[i]== min(VN):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:38:54) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.145649
-- ERROR:
  File "/home/codebench/codes/1793/1596/main.py", line 7
    if(VN[i]== min(VN):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:38:55) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.135945
-- ERROR:
  File "/home/codebench/codes/1793/1596/main.py", line 7
    if(VN[i]== min(VN):
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:03) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:03) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.390881
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:05) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.799669
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.0
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:06) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.721001
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:39:30) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.487231
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:39:35) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:40:29) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.386289
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:41:27) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:41:27) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:41:28) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:42:02) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:43:12) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.473492
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:43:38) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:44:05) 
-- CODE:
from numpy import *
VN = array(eval(input("notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 19:48:12) 
-- CODE:
from numpy import *
VN = array(eval(input(" vetor de notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- EXECUTION TIME:
0.423086
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 19:48:12) 
-- CODE:
from numpy import *
VN = array(eval(input(" vetor de notas:")))
i = 0
s = 0
siz = 0
while(i<size(VN)):
	if(VN[i]== min(VN)):
		s = s + 0
		siz = siz + 0
	else :
		s = s + VN[i]
		siz = siz + 1
	i = i + 1
M = s/siz
print(round(M,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
